# docbook-generator

./: .gitignore  README.md  build.py  config.toml
adapters/: learncpp.py
assets/fonts/: README.md
assets/images/: README.md
docbook/: __init__.py  adapter_registry.py  callouts.py  config.py  math.py  models.py  parser.py  renderer.py  theme.py  toc.py
docbook-generator/: README.md  pyproject.toml  requirements.txt
docbook-generator/adapters/: __init__.py  base.py  generic.py
docbook-generator/docbook/: bookmarks.py  cleaner.py  extractor.py  metadata.py  pdf.py  pipeline.py  syntax.py  utils.py
docbook-generator/templates/: book.html  chapter.html  cover.html
docbook-generator/tests/: test_cleaner.py  test_extractor.py  test_pdf.py  test_theme.py  test_toc.py
docbook-generator/themes/: github.css
input/: 0_13.html  README.md
templates/: toc.html
tests/: test_callouts.py
tests/fixtures/: learncpp_sample.html
themes/: dark.css  light.css  nord.css  sepia.css
