[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbook-generator"
version = "0.1.0"
description = "Generate professionally typeset programming books from saved documentation websites."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DocBook Generator Contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.1",
  "Jinja2>=3.1.4",
  "playwright>=1.45.0",
  "weasyprint>=62.3",
  "Pygments>=2.18.0",
  "Pillow>=10.4.0",
  "cssutils>=2.11.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.2"]

[project.scripts]
docbook-generator = "build:main"

[tool.setuptools]
py-modules = ["build"]
packages = ["docbook", "adapters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
